--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -2,7 +2,6 @@ plugins {
     id 'org.springframework.boot' version '2.6.2'
     id 'io.spring.dependency-management' version '1.0.11.RELEASE'
     id 'java'
-    id 'war'
 }
 
 group = 'com.oneot'
@@ -23,10 +22,10 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web:2.6.1'
     implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-xml:2.13.1'
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.13.1'
+    implementation 'org.springframework.boot:spring-boot-starter-security'
     compileOnly 'org.projectlombok:lombok'
     developmentOnly 'org.springframework.boot:spring-boot-devtools:2.6.1'
     annotationProcessor 'org.projectlombok:lombok'
-    providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat:2.6.1'
     testImplementation 'org.springframework.boot:spring-boot-starter-test:2.6.1'
 }
 
